# brkga-cuda-experiments

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  .gitmodules  Makefile  ideias.txt
GPU-BRKGA/: .gitignore  CMakeLists.txt
GPU-BRKGA/GPU-BRKGA/: GPUBRKGA.cu  GPUBRKGA.cuh  Individual.h  cuda_errorchecking.h  kernels.cu  kernels.h
applications/: CMakeLists.txt  config-tsp.txt
applications/cvrp/: CMakeLists.txt
applications/cvrp/src/: Checker.hpp  CvrpInstance.cpp  CvrpInstance.cu  CvrpInstance.hpp  GpuBrkgaWrapper.cu  GpuBrkgaWrapper.hpp  MinQueue.hpp  Point.cpp  Point.hpp  main.cpp
applications/cvrp/src/brkga/: BaseBrkga.hpp  BrkgaCuda.cpp  BrkgaCuda.hpp  BrkgaOpenCL.cpp  BrkgaOpenCL.hpp  GpuBrkga.cpp  GpuBrkga.hpp
applications/cvrp/src/instances/: CvrpInstance.cpp  CvrpInstance.cu  CvrpInstance.hpp  TSPInstance.cu
applications/scp/src/: main.cpp
applications/src/: Checker.hpp  GpuBrkgaWrapper.cu  main.cpp
applications/src/brkga-api/: BrkgaApi.cpp  BrkgaApi.hpp  BrkgaApiInclude.cpp  CMakeLists.txt  main.cpp
applications/src/brkga-api/decoders/: CvrpDecoder.cpp  CvrpDecoder.hpp  ScpDecoder.cpp  ScpDecoder.hpp  TspDecoder.cpp  TspDecoder.hpp
applications/src/brkga-cuda-1.0/: BrkgaCuda.cu  BrkgaCuda.hpp  BrkgaCudaInclude.cu  CMakeLists.txt  main.cpp  main.cu
applications/src/brkga-cuda-1.0/decoders/: CvrpDecoder.cu  CvrpDecoder.cuh  CvrpDecoder.hpp  ScpDecoder.cu  ScpDecoder.cuh  ScpDecoder.hpp  TspDecoder.cu  TspDecoder.cuh  TspDecoder.hpp
applications/src/brkga-cuda-2.0/: BoxBrkga.cpp  BoxBrkga.hpp  CMakeLists.txt  main-new.cu  main.cpp  main.cu
applications/src/brkga-cuda-2.0/decoders/: CvrpDecoder.cu  CvrpDecoder.hpp  ScpDecoder.cu  ScpDecoder.hpp  TspDecoder.cu  TspDecoder.hpp
applications/src/brkga-mp-ipr/: BrkgaMPIpr.cpp  BrkgaMPIpr.hpp  CMakeLists.txt  main.cpp
applications/src/brkga-mp-ipr/decoders/: BaseDecoder.hpp  CvrpDecoder.cpp  CvrpDecoder.hpp  ScpDecoder.cpp  ScpDecoder.hpp  TspDecoder.cpp  TspDecoder.hpp
applications/src/common/: BrkgaInterface.cpp  BrkgaInterface.hpp  Checker.hpp  CudaCheck.cuh  Logger.hpp  MinQueue.cuh  Parameters.cpp  Parameters.hpp  Point.hpp  Runner.cpp  Runner.cu  Runner.hpp  SortMethod.hpp
applications/src/common/instances/: BaseInstance.cpp  BaseInstance.hpp  CvrpInstance.cpp  CvrpInstance.cu  CvrpInstance.cuh  CvrpInstance.hpp  ScpInstance.cpp  ScpInstance.cu  ScpInstance.cuh  ScpInstance.hpp  TspInstance.cpp  TspInstance.cu  TspInstance.cuh  TspInstance.hpp
applications/src/common/utils/: Functor.cuh  StringUtils.cpp  StringUtils.hpp  ThrustSort.cu  ThrustSort.hpp
applications/src/gpu-brkga/: CMakeLists.txt  GpuBrkga.cpp  GpuBrkga.cu  GpuBrkga.hpp  main.cpp  main.cu
applications/src/gpu-brkga/decoders/: CvrpDecoder.cpp  CvrpDecoder.cu  (+7 more)
applications/src/instances/: CvrpInstance.cpp  CvrpInstance.cu  CvrpInstance.hpp  Instance.cpp  Instance.hpp  ScpInstance.cpp  ScpInstance.cu  ScpInstance.hpp  TSPInstance.cpp  TSPInstance.cu  TSPInstance.hpp  TspInstance.cpp  TspInstance.cu  TspInstance.hpp
applications/src/wrapper/: BaseWrapper.cu  BaseWrapper.hpp  BrkgaApiWrapper.cpp  BrkgaApiWrapper.hpp  BrkgaCudaWrapper.cu  BrkgaCudaWrapper.hpp  GpuBrkgaWrapper.cu  GpuBrkgaWrapper.hpp  OldBrkgaCudaWrapper.cu  OldBrkgaCudaWrapper.hpp
applications/tsp/: CMakeLists.txt
applications/tsp/src/: TSPInstance.cpp  TSPInstance.cu  TSPInstance.h  main.cpp
brkga-cuda-itor/: .gitignore  CMakeLists.txt  README.txt  config-cvrp.txt  config-scp.txt  config.txt
brkga-cuda-itor/bb_segsort/: CHANGELOG.md  CHANGES.md  CMakeLists.txt  bb_bin.h  bb_comput_l.h  bb_comput_s.h  bb_exch.h  bb_segsort.cu  bb_segsort.h
brkga-cuda-itor/brkga-cuda-api/src/: BRKGA.cu
brkga-cuda-itor/brkga-scp-example/src/: BRKGA.h
brkga-cuda-itor/brkga-scp-example2/src/: BRKGA.cu
brkga-cuda-itor/brkga-tsp-example/: config.txt
brkga-cuda-itor/brkga-tsp-example/src/: BRKGA.cu  BRKGA.h
brkga-cuda-itor/brkga_cuda_api/: BBSegSort.cuh  BRKGA.cu  BRKGA.h  BRKGA.hpp  Brkga  Brkga.cu  Brkga.hpp  BrkgaConfiguration.cpp  BrkgaConfiguration.hpp  CommonStructs.h  ConfigFile.cpp  ConfigFile.h  CudaArray.cuh  CudaContainers.cuh  CudaError.cuh  CudaUtils.cu  CudaUtils.cuh  CudaUtils.hpp  DecodeType.hpp  Decoder.h  Decoder.hpp  Instance.hpp  Logger.hpp  MathUtils.h  cuda_error.cuh  nvtx.cuh
brkga-cuda-itor/cvrp_example/: CMakeLists.txt
brkga-cuda-itor/cvrp_example/src/: CvrpInstance.cpp  CvrpInstance.cu  CvrpInstance.hpp  Decoder.cu  Point.hpp  main.cpp
brkga-cuda-itor/scp_example/: CMakeLists.txt
brkga-cuda-itor/scp_example/src/: SetCoveringDecoder.cu  SetCoveringDecoder.h  main.cpp
brkga-cuda-itor/tsp-coal-texture/: config.txt
brkga-cuda-itor/tsp-coal-texture/src/: BRKGA.cu  BRKGA.h  ConfigFile.h  Decoder.cu  Decoder.h
brkga-cuda-itor/tsp-coalescing/: config.txt
brkga-cuda-itor/tsp-coalescing/src/: BRKGA.cu  BRKGA.h  Decoder.h
brkga-cuda-itor/tsp-streams/src/: BRKGA2.cu
brkga-cuda-itor/tsp_example/: CMakeLists.txt  Makefile
brkga-cuda-itor/tsp_example/src/: Decoder.cu  TSPInstance.cu  main.cpp
brkga-cuda-itor/tsp_example2/src/: BRKGA.cu  BRKGA.h  CommonStructs.h  ConfigFile.cpp  ConfigFile.h  TSPInstance.cpp  TSPInstance.h  cuda_error.cuh  main.cpp
brkga-opencl/: .gitignore  .rsync-exclude  CMakeLists.txt  run-remote.sh  run.sh
brkga-opencl/brkga-opencl/: Brkga.cpp  Brkga.hpp  BrkgaOpenCL.hpp  Configuration.cpp  Configuration.hpp  IO.cpp  IO.hpp  OpenCL.cpp  OpenCL.hpp  Problem.hpp
brkga-opencl/config/: tsp
brkga-opencl/kernel/: Algorithm.cl  BRKGA.cl  Fitness.cl  Random.cl
brkga-opencl/src/brkga/: Brkga.cpp  Brkga.hpp  Configuration.cpp  Configuration.hpp  IO.hpp  Problem.hpp
brkga-opencl/src/tsp/: Point.hpp  TspProblem.cpp  TspProblem.hpp  main.cpp
src/: CMakeLists.txt
src/bb_segsort/: bb_segsort.cu  bb_segsort.h
src/brkga-cuda/: Brkga.cu  Brkga.hpp  BrkgaConfiguration.cpp  BrkgaConfiguration.hpp  CudaError.cuh  CudaUtils.cu  CudaUtils.hpp  DecodeType.cpp  DecodeType.hpp  Decoder.cpp  Decoder.hpp  Logger.hpp
src/brkga-cuda/except/: NotImplemented.hpp
yelmewad2021/: CMakeLists.txt  README.md
(+2754 files in other folders)
